K8s/database.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
    spec:
      containers:
        - name: counter-database
          image: quay.io/centos7/postgresql-10-centos7:20221109
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: counter-database
spec:
  ports:
    - port: 5432
  selector:
    app: counter-database
  clusterIP: None
