K8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/sebi364/counter-backend:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: counter-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-backend-ingress
spec:
  rules:
    - host: backend.k3snode1.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-backend
                port:
                  number: 8080
