K8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/sebi364/counter-frontend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: counter-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-frontend-ingress
spec:
  rules:
    - host: frontend.k3snode1.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-frontend
                port:
                  number: 3000
